# ue-sdk-helper

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: train_model.py
notebooks/: 00_client.ipynb  01_workflow.ipynb  02_resources.ipynb  03_train_model_workflow.ipynb  03_train_model_workflow_old.ipynb  04_demo_1D_model.ipynb  04_predict_model_workflow copy.ipynb  05_active_learning_workflow.ipynb  05_demo_2D_model.ipynb  05_model_maximum_workflow.ipynb  05_validate_model_workflow.ipynb  06_model_recommendation_workflow.ipynb  06_plotting.ipynb  exploration.ipynb  train_predict.ipynb
src/data_generation/: generators.py  utils
src/ue_helper/: __init__.py  active_learning.py  plotting.py  utils.py  workflow_templates.py  workflows.py
src/uncertainty_engine_helper/: utils.py
tests/: conftest.py  test_imports.py  test_train_predict_workflow.py
