[tool.poetry]
name = "uncertainty-engine-helper"
version = "0.0.1"
description = "Utility helpers for the Uncertainty Engine ecosystem."
authors = ["Daniel Greenhouse <dan.greenhouse@digilab.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"


dependencies = [
  "uncertainty-engine[vis,notebook]",
  "matplotlib",
  "numpy",
  "seaborn",
  "pandas"
]

[project.urls]
Homepage = "https://github.com/digiLab-ai/uncertainty-engine-sdk-helper"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
devtools = "^0.12.2"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
pytest = "^8.4.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
